Updates to about and teaching

--- a/about.html
+++ b/about.html
@@ -14,83 +14,109 @@ sitemap:
 
 <h2>About</h2>
 <span class="image right"><img src="{{ "/images/dbwVU.jpg" | absolute_url }}" alt="" /></span>
-<p>Dan Work is an associate professor in civil and environmental engineering, computer science, and the Institute for Software Integrated Systems at Vanderbilt University. He has held research appointments at the University of Illinois at Urbana-Champaign (2010–17), Institute for Pure and Applied Mathematics (2015, 2020), Microsoft Research Redmond (2009), and Nokia Research Center Palo Alto (2007–09).</p>
+<p>Dan Work is a Chancellor Faculty Fellow and associate professor in civil and environmental engineering, computer science, and the Institute for Software Integrated Systems at Vanderbilt University. He has held research appointments at the University of Illinois at Urbana-Champaign (2010–17), Institute for Pure and Applied Mathematics (2015, 2020), Microsoft Research Redmond (2009), and Nokia Research Center Palo Alto (2007–09).</p>
 <p>Dr. Work pioneered methods for monitoring and controlling road traffic using vehicles, rather than fixed infrastructure, to sense and control road congestion. In 2015 he and his collaborators were the first to experimentally demonstrate that “phantom” traffic jams, which seemingly occur without an obvious cause but are due to human driving behavior, can be eliminated via control of a small fraction of automated vehicles in the flow. Work is a recognized transportation expert whose work has appeared in media outlets including ABC’s Good Morning America, Reuters, Wired, and MIT Technology Review.</p>
 <p>Dr. Work received a 2018 Gilbreth Lectureship from the National Academy of Engineering and a 2014 CAREER Award from the National Science Foundation. He earned a BS from Ohio State in 2006, and an MS (2007) and PhD (2010) from UC Berkeley, all in civil and environmental engineering.</p>
 
+
 <h2>Appointments</h2>
+<dl>
+<dt style="margin: 0 0 0 0;">Vanderbilt</dt>
+	<dd><ul>
+		<li>Chancellor Faculty Fellow, Office of the Provost, May 2021 - pres.</li>
+		<li>Associate Professor, Civil and Environmental Engineering (tenured), Dec. 2017 - pres.</li>
+		<li>Associate Professor,  Computer Science (affiliate) Dec. 2017 - pres.</li>
+		<li>Associate Professor, Institute for Software Integrated Systems Dec. 2017 - pres.</li>
+	</ul></dd>
+</dl>
+
+
+<h2>Research interests</h2>
+
+<dl>
+<dt style="margin: 0 0 0 0;">Transportation cyber-physical systems</dt>
+	<dd><ul>
+		<li>Stabilizing traffic using automated vehicles at low penetration rates</li>
+		<li>String stability of level 1 automated vehicles</li>
+		<li>Transportation cyber-physical systems testbeds</li>
+	</ul></dd>
+<dt style="margin: 0 0 0 0;">Data analytics for transportation systems</dt>
+	<dd><ul>
+		<li>Traffic flow modeling and estimation</li>
+		<li>Understanding extreme events from incomplete and noisy datasets</li>
+		<li>Analytics for mobility networks</li>
+	</ul></dd>
+</dl>
+
+
+<h2>Recognition and honors</h2>
 <ul>
-<li><strong>Associate Professor, </strong>Vanderbilt University,  Dec. 2017-present.
-<ul>
-<li>Department of Civil and Environmental Engineering</li>
-<li>Department of Electrical Engineering and Computer Science</li>
-<li>Institute for Software Integrated Systems</li>
+	<li><strong>Chancellor Faculty Fellow</strong>, Vanderbilt University, 2021
+	<li><strong>NAE Annual Meeting, speaker</strong>, National Academy of Engineering, 2020
+	<li><strong>2020 Best Paper</strong>, Transportation Research Part C: Emerging Technologies, 2020
+	<li><strong>Global Grand Challenges Summit</strong>, invited participant, National Academy of Engineering, 2019
+	<li><strong>Swedish Royal Academy of Engineering Sciences</strong>, keynote speaker, 100th Anniversary Celebration, 2019
+	<li><strong>NAE China–America Frontiers of Engineering Symposium</strong>, co-organizer, National Academy of  Engineering, 2019
+	<li><strong>TTI Vanguard</strong>, speaker, Less is More, 2018
+	<li><strong>Expert Voices</strong>, contributor, Axios, 2018
+	<li><strong>2018 Pioneers,</strong> <em>Connected World</em>, 2018</li>
+	<li><strong>NAE</strong> <strong>Gilbreth Lecture</strong>, National Academy of Engineering, 2018</li>
+	<li><strong>NAE China US Frontiers of Engineering Symposium Speaker</strong>, National Academy of Engineering, 2017</li>
+	<li><strong>NAE EU US Frontiers of Engineering Symposium Participant</strong>, National Academy of Engineering, 2016</li>
+	<li><strong>CEE Excellence Faculty Fellow</strong>, Department of Civil and Environmental Engineering, University of Illinois at Urbana&#8211;Champaign, 2016</li>
+	<li><strong>ASCE Outstanding Instructor Award</strong>, American Society of Civil Engineers UIUC Student Chapter, 2015</li>
+	<li><strong>Faculty Fellow</strong>, National Center for Supercomputing Applications, 2014</li>
+	<li><strong>CAREER Award</strong>, National Science Foundation, 2014</li>
+	<li><strong>List of Teachers Ranked as Excellent</strong> <strong>(top 10%, ten time winner)</strong>, Center for Teaching Excellence, University of Illinois at Urbana&#8211;Champaign, 2011-2016</li>
+	<li><strong>Featured Project, Scientific American</strong>, &#8220;Citizen Science Featured Project&#8221; Awarded for the TrafficTurk Project, 2012</li>
+	<li><strong>Best Dissertation Award</strong>, IEEE Intelligent Transportation Systems Society, 2011</li>
+	<li><strong>Eno Fellow</strong>, Eno Transportation Foundation, 2010.</li>
+	<li><strong>Rodney E. Slater Award</strong>, Eno Transportation Foundation, 2010</li>
+	<li><strong>Dwight David Eisenhower Transportation Fellow</strong>, US Department of Transportation, 2008 &#8211; 2010</li>
 </ul>
-</li>
-</ul>
-<h2><strong>Research interests</strong></h2>
-<ul>
-<li><strong>Transportation cyber physical systems</strong>
-<ul>
-<li>Traffic estimation and control techniques</li>
-<li>Applications with human driven and automated traffic</li>
-</ul>
-</li>
-<li><strong>Mathematical models of traffic</strong>
-<ul>
-<li>Conservation laws models and networks</li>
-<li>Numerical approximation schemes for nonlinear conservation laws</li>
-</ul>
-</li>
-<li><strong>Decision analytics for sustainable and resilient infrastructure systems</strong>
-<ul>
-<li>Data driven methods for resilience quantification</li>
-<li>Participatory sensing platforms</li>
-</ul>
-</li>
-</ul>
-<h2>Awards and honors</h2>
-<ul>
-<li><strong>2018 Pioneers, </strong><em>Connected World</em>, 2018</li>
-<li><strong>NAE</strong> <strong>Gilbreth Lecture</strong>, National Academy of Engineering, 2018</li>
-<li><strong>NAE China US Frontiers of Engineering Symposium Speaker</strong>, National Academy of Engineering, 2017</li>
-<li><strong>NAE EU US Frontiers of Engineering Symposium Participant</strong>, National Academy of Engineering, 2016</li>
-<li><strong>CEE Excellence Faculty Fellow</strong>, Department of Civil and Environmental Engineering, University of Illinois at Urbana&#8211;Champaign, 2016</li>
-<li><strong>ASCE Outstanding Instructor Award</strong>, American Society of Civil Engineers UIUC Student Chapter, 2015</li>
-<li><strong>Faculty Fellow</strong>, National Center for Supercomputing Applications, 2014</li>
-<li><strong>CAREER Award</strong>, National Science Foundation, 2014</li>
-<li><strong>List of Teachers Ranked as Excellent</strong> <strong>(top 10%, ten time winner)</strong>, Center for Teaching Excellence, University of Illinois at Urbana&#8211;Champaign, 2011-2016</li>
-<li><strong>Featured Project, Scientific American</strong>, &#8220;Citizen Science Featured Project&#8221; Awarded for the TrafficTurk Project, 2012</li>
-<li><strong>Best Dissertation Award</strong>, IEEE Intelligent Transportation Systems Society, 2011</li>
-<li><strong>Eno Fellow</strong>, Eno Transportation Foundation, 2010.</li>
-<li><strong>Rodney E. Slater Award</strong>, Eno Transportation Foundation, 2010</li>
-<li><strong>Dwight David Eisenhower Transportation Fellow</strong>, US Department of Transportation, 2008 &#8211; 2010</li>
-</ul>
+
 <h2>Previous Appointments</h2>
-<ul>
-<li><strong>Associate Professor, </strong>University of Illinois at Urbana-Champaign, Aug. 2017 &#8211; Dec. 2017
-<ul>
-<li>Department of Civil and Environmental Engineering (with tenure)</li>
-<li>Coordinated Science Laboratory</li>
-<li>Department of Electrical and Computer Engineering (courtesy)</li>
-</ul>
-</li>
-<li><strong>Assistant Professor, </strong>University of Illinois at Urbana-Champaign, Dec. 2010 &#8211; Aug. 2017
-<ul>
-<li>Department of Civil and Environmental Engineering</li>
-<li>Coordinated Science Laboratory</li>
-<li>Department of Electrical and Computer Engineering (courtesy)</li>
-</ul>
-</li>
-<li><strong>Senior Fellow</strong>, Institute for Pure and Applied Mathematics, University of California, Los Angeles, Aug. 2015 &#8211; Dec. 2015</li>
-<li><strong>Faculty Fellow</strong>, National Center for Supercomputing Applications, University of Illinois at Urbana-Champaign, July 2014 &#8211; July 2015</li>
-</ul>
+<dl>
+<dt style="margin: 0 0 0 0;">University of Illinois at Urbana&#8211;Champaign</dt>
+<dd><ul>
+	<li>Associate Professor, Civil and Environmental Engineering (tenured)  Aug. 2017 - Dec. 2017</li>
+	<li>Research Associate Professor, Coordinated Science Laboratory, Aug. 2017 - Dec. 2017</li>
+	<li>Associate Professor, Electrical and Computer Engineering (courtesy),  Aug. 2017 - Dec. 2017</li>
+	<li>Assistant Professor, Electrical and Computer Engineering (courtesy),  Nov. 2014 - Aug. 2017</li>
+	<li>Research Assistant Professor, Coordinated Science Laboratory, Feb. 2012 - Aug. 2017</li>
+	<li>Assistant Professor, Civil and Environmental Engineering, Dec. 2010 - Aug. 2017</li>
+	<li>Faculty Fellow, National Center for Supercomputing Applications,  July 2014 - July 2015</li>
+</ul></dd>
+	
+<dt style="margin: 0 0 0 0;">University of California, Los Angeles</dt>
+<dd><ul>
+	<li>Senior Fellow, Institute for Pure and Applied Mathematics,  Fall 2015, Fall 2020</li>
+</ul></dd>
+
+<dt style="margin: 0 0 0 0;">University of California, Berkeley</dt>
+<dd><ul>
+	<li>Graduate Research Assistant, Civil and Environmental Engineering , Aug. 2006 - Aug. 2010</li>
+</ul></dd>
+
+<dt style="margin: 0 0 0 0;">Nokia Research Center, Palo Alto</dt>
+<dd><ul>
+	<li>Research Intern, Mobile Internet Services Systems,  Feb. 2008 - Aug. 2009</li>
+</ul></dd>
+</dl>
+
+
 <h2>Education</h2>
-<ul>
-<li><b>University of California, Berkeley</b><br />
-Ph.D. in Systems Engineering, Department of Civil and Environmental Engineering, 2010</li>
-<li><b>University of California, Berkeley</b><br />
-MS in Systems Engineering, Department of Civil and Environmental Engineering, 2007</li>
-<li><b>The Ohio State University</b><br />
-B.S. in Civil and Environmental Engineering, 2006</li>
-</ul>
+<dl style="margin: 0 0 0 0;">
+<dt style="margin: 0 0 0 0;">University of California, Berkeley</dt>
+<dd><ul>
+	<li>Ph.D. in Systems Engineering, Department of Civil and Environmental Engineering, 2010</li>
+</ul></dd>
+<dt style="margin: 0 0 0 0;">University of California, Berkeley</dt>
+<dd><ul>
+	<li>MS in Systems Engineering, Department of Civil and Environmental Engineering, 2007</li>
+</ul></dd>
+<dt style="margin: 0 0 0 0;">The Ohio State University</dt>
+<dd><ul>
+	<li>B.S. in Civil and Environmental Engineering, 2006</li>
+</ul></dd>
+</dl>
