--- a/about.html
+++ b/about.html
@@ -16,7 +16,8 @@ sitemap:
 <span class="image right"><img src="{{ "/images/dbwVU.jpg" | absolute_url }}" alt="" /></span>
 <p>Dan Work is a Chancellor Faculty Fellow and associate professor in civil and environmental engineering, computer science, and the Institute for Software Integrated Systems at Vanderbilt University. He has held research appointments at the University of Illinois at Urbana-Champaign (2010–17), Institute for Pure and Applied Mathematics (2015, 2020), Microsoft Research Redmond (2009), and Nokia Research Center Palo Alto (2007–09).</p>
 <p>Dr. Work pioneered methods for monitoring and controlling road traffic using vehicles, rather than fixed infrastructure, to sense and control road congestion. In 2015 he and his collaborators were the first to experimentally demonstrate that “phantom” traffic jams, which seemingly occur without an obvious cause but are due to human driving behavior, can be eliminated via control of a small fraction of automated vehicles in the flow. Work is a recognized transportation expert whose work has appeared in media outlets including ABC’s Good Morning America, Reuters, Wired, and MIT Technology Review.</p>
-<p>Dr. Work received a 2018 Gilbreth Lectureship from the National Academy of Engineering and a 2014 CAREER Award from the National Science Foundation. He earned a BS from Ohio State in 2006, and an MS (2007) and PhD (2010) from UC Berkeley, all in civil and environmental engineering. <a href="https://lab-work.github.io/images/people/dbw_highres.jpeg">High resolution headshot.</a></p>
+<p>Dr. Work received a 2018 Gilbreth Lectureship from the National Academy of Engineering and a 2014 CAREER Award from the National Science Foundation. He earned a BS from Ohio State in 2006, and an MS (2007) and PhD (2010) from UC Berkeley, all in civil and environmental engineering.</p>
+<p><a href="https://lab-work.github.io/images/people/dbw_highres.jpeg">High resolution headshot.</a></p>
 
 
 <h2>Appointments</h2>
