updating videos on the front page, and commenting out stale job listings

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@ sitemap:
 									<a href="https://www.vanderbilt.edu/postdoc/position-detail/?id=587" target="_blank">Postdocs in the area of transportation cyber physical systems </a><br>
 									</font></h3> -->
                                 <p>Our research group uses sensing technologies, models, data, and advanced analytics to understand mobility systems so that we can improve them. Our research projects explore the interplay between autonomous vehicles and phantom traffic jams. We also use large mobility datasets to understand urban traffic congestion at city scales, and freight rail traffic at the regional scale. We build mathematical models and systems theory tools to understand the underlying behavior of traffic flow.   </p>
-								<!-- <a href="#" class="image main"><img src="/images/Aug2021VanderTest.png" alt=""></a> -->
-                <p>Our research group is featured in Vanderbilt's Quantum Potential Series, hosted by Jad Abumrad (Radiolab, Dolly Parton's America).
-                See the video here covering "the world’s largest real-world road test on a stretch of I-24 in Nashville to see how semi-autonomous vehicles can ease traffic for more sustainable and less stressful driving." </p>
-                <iframe width="605" height="340" src="https://www.youtube.com/watch?v=SnROMkdXYJc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+								<a href="#" class="image main"><img src="/images/Aug2021VanderTest.png" alt=""></a>
+                <!-- <p>Our research group is featured in Vanderbilt's Quantum Potential Series, hosted by Jad Abumrad (Radiolab, Dolly Parton's America).
+                See the video here covering "the world’s largest real-world road test on a stretch of I-24 in Nashville to see how semi-autonomous vehicles can ease traffic for more sustainable and less stressful driving." </p> -->
+                <!-- <iframe width="605" height="340" src="https://www.youtube.com/watch?v=SnROMkdXYJc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
 
 
 							</article>
