adding videos, editing header text

--- a/index.html
+++ b/index.html
@@ -66,19 +66,21 @@ sitemap:
 									<a href="https://www.vanderbilt.edu/postdoc/position-detail/?id=587" target="_blank">Postdocs in the area of transportation cyber physical systems </a><br>
 									</font></h3> -->
                                 <p>Our research group uses sensing technologies, models, data, and advanced analytics to understand mobility systems so that we can improve them. Our research projects explore the interplay between autonomous vehicles and phantom traffic jams. We also use large mobility datasets to understand urban traffic congestion at city scales, and freight rail traffic at the regional scale. We build mathematical models and systems theory tools to understand the underlying behavior of traffic flow.   </p>
-								<a href="#" class="image main"><img src="/images/Aug2021VanderTest.png" alt=""></a>
-                <!-- <p>Our research group is featured in Vanderbilt's Quantum Potential Series, hosted by Jad Abumrad (Radiolab, Dolly Parton's America).
-                See the video here covering "the world’s largest real-world road test on a stretch of I-24 in Nashville to see how semi-autonomous vehicles can ease traffic for more sustainable and less stressful driving." </p> -->
+								<!-- <a href="#" class="image main"><img src="/images/Aug2021VanderTest.png" alt=""></a> -->
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/SnROMkdXYJc?si=sWheZR0zF9Wg_Cp7" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <p>Our research group is featured in Vanderbilt's Quantum Potential Series, hosted by Jad Abumrad (Radiolab, Dolly Parton's America).
+                See the video above featuring <a href="https://engineering.vanderbilt.edu/bio/jonathan-sprinkle">Dr. Jonathan Sprinle</a> and Dr. Dan Work below. It covers TDOT's <a href="https://i24motion.org">I-24 MOTION</a> Testbed, and our collaborative work with the <a href="https://circles-consortium.github.io/"> CIRCLES Contortium</a> on running "the world’s largest real-world road test on a stretch of I-24 in Nashville to see how semi-autonomous vehicles can ease traffic for more sustainable and less stressful driving." </p>
                 <!-- <iframe width="605" height="340" src="https://www.youtube.com/watch?v=SnROMkdXYJc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe> -->
+
 
 
 							</article>
               <!-- youtube -->
               <article class="post featured">
-                        <h3>Enabling Mixed Autonomy Traffic Control</h3>
-                        <p>This research introduces an exensible open-source hardware and software platform, to transform commodity vehicles into connected and automated vehicles at-scale.</p>
+                        <h3>SAILing CAVs: Speed-Adaptive Infrastructure-Linked Connected & Automated Vehicles</h3>
+                        <p>This research introduces a new V2X application in Connected and Automated Vehicles: SAILing CAVs. We create a vehicle which can automatically match the infrastructure-based variable speed limits as they dynamically change on the interstate.</p>
 
-                       <iframe width="560" height="315" src="https://www.youtube.com/watch?v=slH9nimpaY8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                      <iframe width="560" height="315" src="https://www.youtube.com/embed/gFwJfEvnogI?si=T1jwTFf3AnHoIrxM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
               </article>
 
                         <!-- youtube -->
