--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@ sitemap:
 
 
 							</article>
+              	<!-- youtube -->
+              	<article class="post featured">
+						<h3>Field Deployment of Multi-Agent Reinforcement Learning Based Variable Speed Limit Controllers</h3>
+						<p>We deployed the first ever multi-agent reinforcement learning based variable speed limit controllers in a real-world traffic freeway segment. We trained the agents in a microscopic simulation environment and deployed them on a 17-mile stretch of I-24 in Nashville, TN. </p>
+						<iframe width="560" height="315" src="https://www.youtube.com/watch?v=fBNnG049FLE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+	  			</article>		
+
               <!-- youtube -->
               <article class="post featured">
                         <h3>Enabling Mixed Autonomy Traffic Control with 100 Connected Automated Vehicles</h3>
